<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activities.VehicleProfileActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@color/purple_500">

        <androidx.cardview.widget.CardView
            android:id="@+id/backButtonCardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardCornerRadius="30dp"
            app:cardElevation="0dp"
            app:contentPadding="5dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/back_button"
                android:src="@drawable/ic_back" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/vehicleNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/comfortaa_bold"
                android:text="CIVIC PETROL"
                android:textColor="@color/white"
                android:textSize="27sp" />

            <TextView
                android:id="@+id/vehicleNumberTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/comfortaa"
                android:text="MH12AB1234"
                android:textColor="@color/white"
                android:textSize="15sp" />

        </LinearLayout>

    </RelativeLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:columnCount="2"
        android:rowCount="2">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_row="0"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/comfortaa"
                android:text="@string/make"
                android:textSize="16sp">

            </TextView>

            <TextView
                android:id="@+id/makeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/comfortaa_bold"
                android:text="HONDA"
                android:textColor="@color/black"
                android:textSize="18sp">

            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_row="0"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/comfortaa"
                android:text="@string/model"
                android:textSize="16sp">

            </TextView>

            <TextView
                android:id="@+id/modelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/comfortaa_bold"
                android:text="CIVIC"
                android:textColor="@color/black"
                android:textSize="18sp">

            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_marginTop="30dp"
            android:layout_row="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/comfortaa"
                android:text="@string/fuel_type"
                android:textSize="16sp">

            </TextView>

            <TextView
                android:id="@+id/fuelTypeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/comfortaa_bold"
                android:text="PETROL"
                android:textColor="@color/black"
                android:textSize="18sp">

            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_marginTop="30dp"
            android:layout_row="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/comfortaa"
                android:text="@string/transmission"
                android:textSize="16sp">

            </TextView>

            <TextView
                android:id="@+id/transmissionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/comfortaa_bold"
                android:text="AUTOMATIC"
                android:textColor="@color/black"
                android:textSize="18sp">

            </TextView>

        </LinearLayout>

    </GridLayout>

</LinearLayout>